fix height and double-tap to zoom on mobile

--- a/style.css
+++ b/style.css
@@ -10,9 +10,12 @@
 
 body {
   background: mediumpurple;
-  padding: 50px;
+  padding-top: 50px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100dvh;
+  overflow: hidden;
 }
 
 .date-input {
@@ -47,6 +50,7 @@ body {
   font-weight: 500;
   text-transform: uppercase;
   transition: 0.3s;
+  touch-action: manipulation;
 }
 
 .days,
